# open-source-rag-system

./: .coveragerc  .env  .env.example  .env.local  .flake8  .gitignore  CLAUDE.md  CODE_FIXES_SUMMARY.md  DEVELOPMENT_NOTES.md  FRONTEND_GUIDE.md  LICENSE  LLM_SWITCHING_GUIDE.md  MEMORY_PROBLEM_SOLVED.md  NORMAL_STARTUP_GUIDE.md  OBJECTIVE_BEST_SOLUTION.md  PROJECT_ROADMAP.md  PROJECT_STRUCTURE.md  PROJECT_SUSI_README.md  QUERY_IMPROVEMENTS.md  README.md  README_CURSOR.md  RELEASE_NOTES_v1.3.0.md  REQUIREMENTS_ENGINEERING.md  SERVER_DEPLOYMENT_GUIDE.md  SIMPLE_RAG_README.md  Swiss_RAG_Arbeitspakete.xlsx  TESTING.md  api_test.http  bandit-report-fixed.json  bandit-report.json  check_requirements.py  cleanup_script.py  debug_llm_issue.py  debug_rag_failure.py  debug_search.py  debug_upload_trace.py  demo_rag_vs_training.py  find_ollama.bat  install_fast_models.bat  manage_llm.py  (+58 more)
.archive/: ARCHIVED_SERVICES.md  ARCHIVE_SUMMARY.md  README.md  auth.py  database_migration.py  services_cleanup.txt  vector_search.py
.archive/cleanup-docs/: CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  ZERO_HALLUCINATION_PLAN.md
.archive/legacy-simple-api/: core_simple_api.py  core_simple_frontend.html  core_start_simple_rag.py
.archive/old-config/: confidence_config.yaml  config.py
.archive/old-services/: api_confidence_endpoints.py  api_simple_rag_api.py
.archive/overengineered-services/vector-engine/: Dockerfile  mypy.ini  pyproject.toml
.archive/overengineered-services/vector-engine/app/: vector_service.py
.claude/: settings.local.json
.github/workflows/: ci-cd.yml  ci.yml  security.yml  tests.yml
config/: config.py  database_config.py  llm_config.yaml  production_config.yaml
core/: __init__.py  main.py  ollama_client.py  startup_checks.py
core/di/: __init__.py  container.py  services.py
core/middleware/: __init__.py  metrics_middleware.py  tenant_middleware.py
core/models/: __init__.py  api_models.py
core/processors/: __init__.py  document_processors.py
core/repositories/: __init__.py  audit_repository.py  base.py  database_factory.py  factory.py  interfaces.py  models.py  postgresql_repository.py  sqlite_repository.py  tenant_repository.py  vector_repository.py
core/routers/: admin.py  async_processing.py  cache.py  compliance.py  document_manager.py  documents.py  llm.py  metrics.py  progress.py  query.py  system.py  tenants.py
core/services/: __init__.py  async_processing_service.py  backup_service.py  compliance_service.py  confidence_manager.py  document_service.py  metrics_service.py  query_service.py  (+6 more)
data/: audit.db-shm  audit.db-wal  processing_queue.json  rag_database.db-shm  rag_database.db-wal
demo_dataset/: benutzerhandbuch.txt  company_policy.txt  demo_questions.txt  meeting_notes.txt  project_specifications.txt  qm_auditbericht.txt  qm_compliance_checkliste.txt  qm_test_prompts.txt  qm_testprotokolle.txt
deployment/: Makefile  docker-compose.yml  pytest.ini  start_server.bat
docs/: API.md  API_DOCUMENTATION.md  ARCHITECTURE.md  CODEBASE_RESTRUCTURE_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DOMAIN_CONFIGURATION_GUIDE.md  ENVIRONMENT_SETUP.md  LOCAL_SETUP.md  MUNICIPAL_RAG_GUIDE.md  PERFORMANCE_OPTIMIZATIONS.md  PULL_REQUEST_TEMPLATE.md  QUICKSTART.md  README.md  SECURITY.md  SETUP_GUIDE.md  SIMPLE_RAG_README.md  SWISS_DATA_PROTECTION_COMPLIANCE.md  TECHNOLOGY_STACK.md  TESTING.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  WIDGET_INTEGRATION_GUIDE.md
example-website/: README.md  about.html  contact.html  index.html  styles.css
monitoring/: alerts.yml  prometheus.yml
nginx/: nginx.conf
scripts/: deploy.sh  init.sql
services/: __init__.py  async_processor.py  document_manager.py  hybrid_search.py  hybrid_storage.py  improved_chunking.py  llm_manager.py  persistent_storage.py  query_expansion.py  reranking.py  smart_answer.py  validation.py  vector_store_db.py
services/document-processor/: pyproject.toml  setup.cfg
services/document-processor/app/models/: __init__.py  documents.py
static/: index.html
strategy/: ARLESHEIM_TRAINING_GUIDE.md  MUNICIPAL_USE_CASES.md  README.md  TECHNICAL_ROADMAP.md  TWO_YEAR_PLAN.md
tests/: conftest.py  conftest_fixed.py  test_api.py  test_api_fixed.py  test_basic_functionality.py  test_download_endpoint.py  test_ollama_integration.py  test_progress_tracking.py  test_redis_cache.py  test_services.py  test_simple_rag.py
tools/: benchmark_vector_search.py  check_logs.py  create_excel_workpackages.py  database_migration.py  import_swiss_project_kanboard.py  import_workpackages_openproject.py  install_ollama.py  integrate_faiss.py  integrate_optimized_rag.py  municipal_model_trainer.py  optimized_rag.py  search_has_documents.py  setup_kanboard.bat  setup_rag_system.py  simple_ollama_install.py  simple_project_dashboard.html
widget/: README.md  chat-widget.html  index.html  test-standalone.html  widget-api.js  widget-integration-guide.md  widget-loader.js  widget-styles.css
(+278 files in other folders)
