[tool.poetry]
name = "document-processor"
version = "1.0.0"
description = "Document processing service for RAG system"
authors = ["RAG System Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.4.0"
sqlalchemy = "^2.0.0"
asyncpg = "^0.28.0"
alembic = "^1.12.0"
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"
aiofiles = "^23.2.0"
aiohttp = "^3.8.0"
numpy = "^1.24.0"
pandas = "^2.0.0"
PyPDF2 = "^3.0.0"
pymupdf = "^1.23.0"
pdfplumber = "^0.10.0"
python-docx = "^0.8.11"
openpyxl = "^3.1.0"
lxml = "^4.9.0"
beautifulsoup4 = "^4.12.0"
pytesseract = "^0.3.10"
Pillow = "^10.0.0"
sentence-transformers = "^2.2.0"
langchain = "^0.0.300"
httpx = "^0.25.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.9.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=app --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"